cnd/cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedIdentifierTest/iz155459.cpp
template<typename T> class A; // warning: Unable to resolve identifier A
typedef A<int> Ai; // error: Unable to resolve identifier A